--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>UUD Global Enterprises</title>
+  <link rel="shortcut icon" href="logo.jpg" type="image/jpg" />
+  <link rel="stylesheet" href="style.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="index.js" type="text/css" media="all" />
+</head>
+<body>
+  <div class="login-container">
+    <div class="header">
+      <img src="logo.jpg" alt="logo">
+      <h2>UUD Global Enterprises</h2>
+    </div>
+    <hr />
+    <br />
+    <form id="LoginForm">
+      <div class="form-group">
+        <label for="Username">Username</label>
+        <input type="text" name="username" id="username" placeholder="Username" />
+      </div>
+      <div class="form-group">
+        <label for="Password">Password</label>
+        <input type="password" name="password" id="password" placeholder="Password" />
+      </div>
+      <input type="checkbox"> <span>Remember Me!</span> <a href="#">Forgot Password?</a>
+      <br />
+      <div class="form-group">
+        <button type="submit">Sign In</button>
+      </div>
+    </form>
+  </div>
+  <footer>
+    <p>&copy; UUD Global Enterprises 2025.</p>
+  </footer>
+</body>
+<script src="index.js"></script>
+<script src="script.js"></script>
+</html>
