--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
   <title>UUD Global Enterprises</title>
   <link rel="shortcut icon" href="logo.jpg" type="image/jpg" />
   <link rel="stylesheet" href="style.css" type="text/css" media="all" />
-  <link rel="stylesheet" href="index.js" type="text/css" media="all" />
+  <link rel="stylesheet" href="index.css" type="text/css" media="all" />
 </head>
 <body>
   <div class="login-container">
+    <center>
     <div class="header">
       <img src="logo.jpg" alt="logo">
       <h2>UUD Global Enterprises</h2>
     </div>
-    <hr />
-    <br />
+    </center>
+    <br /><br />
     <form id="LoginForm">
       <div class="form-group">
         <label for="Username">Username</label>
@@ -26,16 +27,24 @@
         <input type="password" name="password" id="password" placeholder="Password" />
       </div>
       <input type="checkbox"> <span>Remember Me!</span> <a href="#">Forgot Password?</a>
-      <br />
+      <br /><br />
       <div class="form-group">
         <button type="submit">Sign In</button>
       </div>
+      <!--
+      <div class="form-group">
+        <p id="data_message">Login Successfully...</p>
+      </div>
+      -->
     </form>
   </div>
+  <!--
   <footer>
     <p>&copy; UUD Global Enterprises 2025.</p>
   </footer>
+  -->
 </body>
 <script src="index.js"></script>
 <script src="script.js"></script>
+<script src="sweatalert.js"></script>
 </html>
